Breathe theme: Fix spacing issues with sidebar menu when shown at narrow viewports.
* Prevent adminbar from being hidden
* Fix hamburger icon lacking sufficient top margin

Props vajaparadarshit, coffee2code.
Fixes 4982.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9425 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -333,6 +333,12 @@ body,
 	color: inherit;
 }
 
+@media only screen and (max-width: 480px) {
+	body.responsive-show #wpadminbar {
+		top: 0;
+	}
+}
+
 @media (max-width: 876px) {
 	body.responsive-show {
 		overflow-y: visible;
@@ -350,6 +356,10 @@ body,
 	#secondary-toggle {
 		margin-left: 22px;
 		margin-right: 0px;
+	}
+
+	.responsive-show #secondary-toggle {
+		margin-top: 22px;
 	}
 
 	#secondary-toggle:before {
